Bug 327995 - Changes made to query design not reflected in reports after saving
Summary: Changes made to query design not reflected in reports after saving
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Queries (other bugs)
Version First Reported In: 2.7.4
Platform: Compiled Sources All
: NOR normal
Target Milestone: 2.7
Assignee: Jarosław Staniek
URL: http://forum.kde.org/viewtopic.php?f=...
Keywords:
Depends on: 327993
Blocks:
  Show dependency treegraph
 
Reported: 2013-11-23 23:54 UTC by Jarosław Staniek
Modified: 2013-11-24 00:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.7.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jarosław Staniek 2013-11-23 23:54:36 UTC
Query design not reflected in reports after saving. Reopening whole database needed.

Reproducible: Always

Steps to Reproduce:
1. Open query design.
1. Open report in data view mode. The report should be based on the above query.
1. Save changes to query design after making some visible changes.
2. Move to design view of the above report, and back to the data view.

Actual Results:  
The report still shows records from the original version of the query.

Expected Results:  
The report shows records from updated query.

Probably applies to forms as well.
Comment 1 Jarosław Staniek 2013-11-24 00:02:09 UTC
Git commit e7c976f0812537c581dcbe7a193a234130ea7107 by Jaroslaw Staniek.
Committed on 23/11/2013 at 23:56.
Pushed by staniek into branch 'master'.

Make changes to query design reflected in reports after saving

Probably applies to forms as well.

M  +3    -0    kexi/plugins/queries/kexiquerydesignersql.cpp

http://commits.kde.org/calligra/e7c976f0812537c581dcbe7a193a234130ea7107
Comment 2 Jarosław Staniek 2013-11-24 00:03:12 UTC
Git commit d9941d6d099430fd0edb40264d4e5fa482c4bc8b by Jaroslaw Staniek.
Committed on 23/11/2013 at 23:56.
Pushed by staniek into branch 'calligra/2.7'.

Make changes to query design reflected in reports after saving

Probably applies to forms as well.

M  +3    -0    kexi/plugins/queries/kexiquerydesignersql.cpp

http://commits.kde.org/calligra/d9941d6d099430fd0edb40264d4e5fa482c4bc8b