Make changes to query design reflected in reports after saving

Probably applies to forms as well.

BUG:327995